# arrow-view

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: arrow_desc.cc  arrow_head.cc  arrow_info.cc  arrow_view.cc  utils.cc  utils.h
src/impl/: runtime_config.cc  runtime_config.h  viewer.cc  viewer.h
test/: dataset_dump.py  dataset_preview.ipynb
